--- a/public/manage_my/login.html
+++ b/public/manage_my/login.html
@@ -26,13 +26,13 @@
                             <div class="form-group">
                                 <label for="inputEmail3" class="col-sm-3 control-label">用户名</label>
                                 <div class="col-sm-9">
-                                    <input type="text" class="form-control" id="inputEmail3" placeholder="请输入用户名">
+                                    <input name='username' type="text" class="form-control" id="inputEmail3" placeholder="请输入用户名">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">密码</label>
                                 <div class="col-sm-9">
-                                    <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                                    <input name='password' type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
                                 </div>
                             </div>
                             <div class="form-group">
