--- a/public/manage_my/login.html
+++ b/public/manage_my/login.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <!-- 导入bootstrap的css -->
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <!-- 导入插件样式 -->
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
     <!-- 导入样式 -->
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/login.css">
@@ -26,7 +28,8 @@
                             <div class="form-group">
                                 <label for="inputEmail3" class="col-sm-3 control-label">用户名</label>
                                 <div class="col-sm-9">
-                                    <input name='username' type="text" class="form-control" id="inputEmail3" placeholder="请输入用户名">
+                                    <!-- 自动完成   浏览器一般是自动开启的  autocomplete="off" -->
+                                    <input name='username' autocomplete="off" type="text" class="form-control" id="inputEmail3" placeholder="请输入用户名">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -54,5 +57,7 @@
 <script src="./lib/jquery/jquery.min.js"></script>
 <!-- 导入bs的js -->
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+<!-- 导入bs验证插件的js -->
+<script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <!-- 自己的js -->
 <script src="./js/login.js"></script>
