--- a/public/manage_my/login.html
+++ b/public/manage_my/login.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <!-- 导入插件样式 -->
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <!-- 导入样式 -->
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/login.css">
+    
 </head>
 
 <body>
@@ -59,5 +61,7 @@
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <!-- 导入bs验证插件的js -->
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<!-- 引入 进度条 -->
+<script src="./lib/nprogress/nprogress.js"></script>
 <!-- 自己的js -->
 <script src="./js/login.js"></script>
