调用登陆登出接口,判断登陆状态,modal,抽取公共的jscss,根据index页面创建其他的类似页面

--- a/public/manage_my/products.html
+++ b/public/manage_my/products.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <ul>
-                <li class=''>
+                <li >
                     <a href="user.html">
                         <span class='glyphicon glyphicon-user'></span>用户管理</a>
                 </li>
@@ -45,7 +45,7 @@
                         </li>
                     </ol>
                 </li>
-                <li>
+                <li class='active'>
                     <a href="products.html">
                         <span class='glyphicon glyphicon-tags'></span>商品管理</a>
                 </li>
@@ -65,7 +65,7 @@
                     <a href="#">管理系统</a>
                 </li>
                 <li>
-                    首页
+                    商品管理
                 </li>
             </ol>
             <!-- 圖表 -->
