--- a/public/manage_my/second.html
+++ b/public/manage_my/second.html
@@ -29,11 +29,11 @@
         </div>
         <div class="content">
             <ul>
-                <li class=''>
+                <li >
                     <a href="user.html">
                         <span class='glyphicon glyphicon-user'></span>用户管理</a>
                 </li>
-                <li>
+                <li class='active'>
                     <a href="javascript:void(0);">
                         <span class='glyphicon glyphicon-list'></span>分类管理</a>
                     <ol>
@@ -41,7 +41,7 @@
                             <a href="first.html">一级分类</a>
                         </li>
                         <li>
-                            <a href="second.html">二级分类</a>
+                            <a style='color:white' href="second.html">二级分类</a>
                         </li>
                     </ol>
                 </li>
@@ -65,7 +65,10 @@
                     <a href="#">管理系统</a>
                 </li>
                 <li>
-                    首页
+                    分类管理
+                </li>
+                <li>
+                    二级分类
                 </li>
             </ol>
             <!-- 圖表 -->
