--- a/public/manage_my/user.html
+++ b/public/manage_my/user.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <ul>
-                <li class=''>
+                <li class='active'>
                     <a href="user.html">
                         <span class='glyphicon glyphicon-user'></span>用户管理</a>
                 </li>
@@ -65,7 +65,7 @@
                     <a href="#">管理系统</a>
                 </li>
                 <li>
-                    首页
+                    用户管理
                 </li>
             </ol>
             <!-- 圖表 -->
