完成启用禁用

--- a/public/manage_my/user.html
+++ b/public/manage_my/user.html
@@ -149,7 +149,7 @@
                     已禁用
                 {{/if}}
             </td>
-            <td>
+            <td data-id="{{$value.id}}">
                 {{if $value.isDelete==0}}
                     <button class="btn btn-danger">禁用</button>
                 {{else}}
