--- a/public/manage_my/first.html
+++ b/public/manage_my/first.html
@@ -156,7 +156,7 @@
 
 <!-- 导入bs的js -->
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
-<!-- echarts -->
+<!-- echarts -->1
 <script src="./lib/echarts/echarts.min.js"></script>
 <!-- 导入模板引擎 -->
 <script src="./lib/artTemplate/template.js"></script>
