--- a/public/mobile_my/product.html
+++ b/public/mobile_my/product.html
@@ -153,6 +153,6 @@
 
 </html>
 <!-- 导入mui -->
-<script src="./lib/mui/js/mui.min.js"></script>
+<script src="./lib/zepto/zepto.min.js"></script><script src="./lib/mui/js/mui.min.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/index.js"></script>
