--- a/public/mobile_my/register.html
+++ b/public/mobile_my/register.html
@@ -92,5 +92,5 @@
 
 </html>
 <!-- 导入mui -->
-<script src="./lib/mui/js/mui.min.js"></script>
+<script src="./lib/zepto/zepto.min.js"></script><script src="./lib/mui/js/mui.min.js"></script>
 <script src="./js/common.js"></script>
