--- a/public/mobile_my/userCenter.html
+++ b/public/mobile_my/userCenter.html
@@ -19,7 +19,7 @@
     <div class="lt_container">
         <div class="lt_header">
             <a href="javascript:void(0)">
-                <span class="fa fa-home"></span>
+                <span class="fa fa-chevron-left"></span>
             </a>
             <h4>个人中心</h4>
             <a href="javascript:void(0)">
@@ -95,6 +95,6 @@
 
 </html>
 <!-- 导入mui -->
-<script src="./lib/mui/js/mui.min.js"></script>
+<script src="./lib/zepto/zepto.min.js"></script><script src="./lib/mui/js/mui.min.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/index.js"></script>
