--- a/public/mobile_my/searchList.html
+++ b/public/mobile_my/searchList.html
@@ -46,12 +46,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)">价格
+                                <a class="price-option" href="javascript:void(0)">价格
                                     <span class="fa fa-angle-down"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)">库存
+                                <a class="num-option" href="javascript:void(0)">库存
                                     <span class="fa fa-angle-down"></span>
                                 </a>
                             </li>
@@ -66,53 +66,7 @@
                     <!-- 商品列表 -->
                     <!-- .product-list>ul>li*5>a[href='javascript:void(0)']>img[src="./images/detail.jpg"]+p{Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400}+span{¥499.1}+span{¥500}+button{立即购买} -->
                     <div class="product-list">
-                        <ul>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <img src="./images/detail.jpg" alt="">
-                                    <p>Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400</p>
-                                    <span>¥499.1</span>
-                                    <span>¥500</span>
-                                    <button>立即购买</button>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <img src="./images/detail.jpg" alt="">
-                                    <p>Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400</p>
-                                    <span>¥499.1</span>
-                                    <span>¥500</span>
-                                    <button>立即购买</button>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <img src="./images/detail.jpg" alt="">
-                                    <p>Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400</p>
-                                    <span>¥499.1</span>
-                                    <span>¥500</span>
-                                    <button>立即购买</button>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <img src="./images/detail.jpg" alt="">
-                                    <p>Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400</p>
-                                    <span>¥499.1</span>
-                                    <span>¥500</span>
-                                    <button>立即购买</button>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    <img src="./images/detail.jpg" alt="">
-                                    <p>Sport飓风 Nike Kwazi 休闲运动鞋男 844839-002-001-100-400</p>
-                                    <span>¥499.1</span>
-                                    <span>¥500</span>
-                                    <button>立即购买</button>
-                                </a>
-                            </li>
-                        </ul>
+                        <ul></ul>
                     </div>
                 </div>
             </div>
@@ -151,5 +105,28 @@
 
 </html>
 <!-- 导入mui -->
-<script src="./lib/zepto/zepto.min.js"></script><script src="./lib/mui/js/mui.min.js"></script>
+<script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/mui/js/mui.min.js"></script>
+<!-- 导入模板引擎 -->
+<script src="./lib/artTemplate/template.js"></script>
+<!-- 定义模板 -->
+<script id='product' type="text/html">
+    {{each data}}
+        <li>
+            <a href="javascript:void(0)">
+                {{if $value.pic.length!=0}}
+                    <img src="{{$value.pic[0].picAddr}}" alt="">
+                {{else}}
+                    <img src="./images/none.jpg" alt="">
+                {{/if}}
+                <p>{{$value.proName}}</p>
+                <span>{{$value.price}}</span>
+                <span>{{$value.oldPrice}}</span>
+                <button data-id="{{$value.id}}">立即购买</button>
+            </a>
+        </li>
+    {{/each}}
+</script>
 <script src="./js/common.js"></script>
+<!-- 引入数据 -->
+<script src="./js/searchList.js"></script>
